# openstructure

./: .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  README.md  homebrew.patch
actions/: ost-compare-ligand-structures  ost-compare-structures
cmake_support/: FindParasail.cmake  OST.cmake
deployment/: CMakeLists.txt
docker/: Dockerfile
examples/code_fragments/mm/: ethanol_example_using_topology.py
examples/scoring/: README.md  compare-ligand-structures_example_out.json  compare-structures_example_out.json  model_ligand-1.sdf  model_ligand-2.sdf  model_ligand-3.sdf
modules/: index.rst
modules/base/doc/: base.rst  settings.rst
modules/base/pymod/: __init__.py.in  table.py  wrap_base.cc
modules/base/src/: CMakeLists.txt  string_ref.hh
modules/base/tests/: test_string_ref.cc
modules/bindings/doc/: bindings.rst  parasail.rst  tmtools.rst
modules/bindings/pymod/: CMakeLists.txt  dockq.py  export_parasail.cc  wrap_bindings.cc
modules/bindings/src/: CMakeLists.txt  (+2 more)
modules/config/: CMakeLists.txt  config.hh.in
modules/doc/: actions.rst  deprecated_actions.rst  install.rst
modules/mol/alg/pymod/: CMakeLists.txt  __init__.py  bb_lddt.py  chain_mapping.py  contact_score.py  dockq.py  export_biounit.cc  export_gdt.cc  export_molck.cc  lddt.py  ligand_scoring.py  ligand_scoring_base.py  ligand_scoring_lddtpli.py  ligand_scoring_scrmsd.py  qsscore.py  scoring.py  scoring_base.py  stereochemistry.py  wrap_mol_alg.cc
scripts/: dng.in  ost-nightly-build.sh  ost.in  ost_startup.py.in
singularity/: Singularity
tools/molck/: main.cc
(+181 files in other folders)
